<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@android:dimen/thumbnail_width"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calculator"
            android:textSize="26dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="clip_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/input1" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/etv1"
                android:id="@+id/v1"
                android:inputType="numberDecimal"
                android:paddingRight="150dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="clip_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input2"
                android:paddingLeft="50dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/v2"
                android:inputType="numberDecimal"
                android:autofillHints="@string/etv2"
                android:paddingRight="150dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner"
            android:entries="@array/dropdown"
            android:padding="5dp"
            android:layout_marginLeft="240dp">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ans"
            android:text="@string/answer"
            android:layout_marginLeft="50dp"
            android:textSize="18dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/button"
            android:onClick="insertValue"
            android:layout_marginTop="20dp"
            android:text="@string/hitung"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>